--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Platzi Video</title>
   </head>
   <body>
-    <main>
-      <video src="#"></video>
+    <main class="container">
+      <video id="player" class="movie">
+        <source
+          src="https://ia800201.us.archive.org/12/items/BigBuckBunny_328/BigBuckBunny_512kb.mp4"
+        />
+      </video>
+      <button id="playButton">Play</button>
+      <button id="pauseButton">Pause</button>
     </main>
 
     <script src="./src/index.js"></script>
