Add MediaPlayer module

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
       <button id="pauseButton">Pause</button>
     </main>
 
-    <script src="./src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
