--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
           src="https://ia800201.us.archive.org/12/items/BigBuckBunny_328/BigBuckBunny_512kb.mp4"
         />
       </video>
-      <button id="playButton">Play</button>
-      <button id="pauseButton">Pause</button>
+      <button id="playButton">Play/Pause</button>
     </main>
 
     <script type="module" src="./src/index.js"></script>
