--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         />
       </video>
       <button id="playButton">Play/Pause</button>
+      <button id="muteButton">Mute/Unmute</button>
     </main>
 
     <script type="module" src="./src/index.js"></script>
