--- a/html/prototypal-inheritance.html
+++ b/html/prototypal-inheritance.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Herencia Prototipal</title>
@@ -24,24 +25,24 @@
         this.name = name;
       }
 
-      Hero.prototype.saludar = function() {
+      Hero.prototype.saludar = function () {
         console.log(`Hola, soy ${this.name}.`);
       };
 
-      const zelda = new Hero('Zelda');
+      const zelda = new Hero("Zelda");
 
       // propiedades de la instancia
-      console.log('Name:', zelda.name);
+      console.log("Name:", zelda.name);
       // propiedades de la "clase"
-      console.log('Saludar:', zelda.saludar);
+      console.log("Saludar:", zelda.saludar);
 
       // propiedades heredadas ej: toString
-      console.log('toString:', zelda.toString);
+      console.log("toString:", zelda.toString);
 
       // hasOwnProperty (de dónde sale toString o esto?)
       console.log(
         'zelda.hasOwnProperty("saludar"):',
-        zelda.hasOwnProperty('saludar')
+        zelda.hasOwnProperty("saludar")
       );
 
       // inspeccionemos el prototipo del zelda
