--- a/html/scope.html
+++ b/html/scope.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Scope</title>
@@ -35,7 +36,7 @@
       // Block Scope
       function printNumbers2() {
         for (let i = 0; i < 10; i++) {
-          setTimeout(function() {
+          setTimeout(function () {
             console.log(i);
           }, 100);
         }
