--- a/html/call-apply-bind.html
+++ b/html/call-apply-bind.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>
@@ -22,8 +23,8 @@
       }
 
       const richard = {
-        name: 'Richard',
-        apellido: 'Kaufman López',
+        name: "Richard",
+        apellido: "Kaufman López",
       };
 
       saludar.call(richard);
@@ -33,10 +34,10 @@
         console.log(`${this.name} camina ${metros} metros hacia ${direccion}.`);
       }
 
-      caminar.call(richard, 400, 'norte');
+      caminar.call(richard, 400, "norte");
 
       // Establece `this` usando `apply` y pasar argumentos a la función
-      const valores = [800, 'noreste'];
+      const valores = [800, "noreste"];
       caminar.apply(richard, valores);
 
       /*
@@ -45,22 +46,22 @@
       */
 
       // Establecer `this` en una nueva función usando `bind`
-      const daniel = { name: 'Daniel', apellido: 'Sánchez' };
+      const daniel = { name: "Daniel", apellido: "Sánchez" };
       const danielSaluda = saludar.bind(daniel);
       danielSaluda();
 
       const danielCamina = caminar.bind(daniel, 2000);
-      danielCamina('oeste');
+      danielCamina("oeste");
 
       // Cuándo es útil usar uno de estos métodos
-      const buttons = document.getElementsByClassName('call-to-action');
+      const buttons = document.getElementsByClassName("call-to-action");
       // buttons.forEach(button => {
       //   button.onclick = () => alert('Nunca pares de aprender!');
       // });
 
       // NodeList
-      Array.prototype.forEach.call(buttons, button => {
-        button.onclick = () => alert('Nunca pares de aprender!');
+      Array.prototype.forEach.call(buttons, (button) => {
+        button.onclick = () => alert("Nunca pares de aprender!");
       });
     </script>
   </body>
