--- a/html/closures.html
+++ b/html/closures.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Closures</title>
@@ -46,13 +47,13 @@
         let count = n;
 
         return {
-          increase: function() {
+          increase: function () {
             count = count + 1;
           },
-          decrease: function() {
+          decrease: function () {
             count = count - 1;
           },
-          getCount: function() {
+          getCount: function () {
             return count;
           },
         };
@@ -60,17 +61,17 @@
 
       let counter = makeCounter(7);
 
-      console.log('The count is:', counter.getCount());
+      console.log("The count is:", counter.getCount());
       counter.increase();
-      console.log('The count is:', counter.getCount());
+      console.log("The count is:", counter.getCount());
       counter.decrease();
       counter.decrease();
       counter.decrease();
       counter.decrease();
-      console.log('The count is:', counter.getCount());
+      console.log("The count is:", counter.getCount());
 
       counter.count = 0;
-      console.log('The count is:', counter.getCount());
+      console.log("The count is:", counter.getCount());
     </script>
   </body>
 </html>
