--- a/html/prototype.html
+++ b/html/prototype.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Prototype</title>
@@ -120,14 +121,14 @@
         // return this;
       }
 
-      Hero.prototype.saludar = function() {
+      Hero.prototype.saludar = function () {
         console.log(`New: ${this.name}`);
       };
 
-      const zelda = new Hero('Zelda');
+      const zelda = new Hero("Zelda");
       zelda.saludar();
 
-      const link = new Hero('Link');
+      const link = new Hero("Link");
       link.saludar();
     </script>
   </body>
