Add service workers

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <main class="container">
       <video id="player" class="movie">
+        <source src="./dist/video/BigBuckBunny_512kb.mp4" type="" />
         <source
           src="https://ia800201.us.archive.org/12/items/BigBuckBunny_328/BigBuckBunny_512kb.mp4"
         />
