--- a/html/closures.html
+++ b/html/closures.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <a href="/ejercicios/">Go back</a>
+    <a href="#">Go back</a>
     <p><em>Abre la consola</em></p>
 
     <script>
@@ -61,17 +61,17 @@
 
       let counter = makeCounter(7);
 
-      console.log("The count is:", counter.getCount());
+      console.log('The count is:', counter.getCount());
       counter.increase();
-      console.log("The count is:", counter.getCount());
+      console.log('The count is:', counter.getCount());
       counter.decrease();
       counter.decrease();
       counter.decrease();
       counter.decrease();
-      console.log("The count is:", counter.getCount());
+      console.log('The count is:', counter.getCount());
 
       counter.count = 0;
-      console.log("The count is:", counter.getCount());
+      console.log('The count is:', counter.getCount());
     </script>
   </body>
 </html>
