--- a/html/index.html
+++ b/html/index.html
@@ -8,23 +8,21 @@
     <a href="/">Go back</a>
     <h1>Índice</h1>
     <ol>
-      <li><a href="/ejercicios/scope.html">Scope</a></li>
-      <li><a href="/ejercicios/closures.html">Closures</a></li>
+      <li><a href="#scope.html">Scope</a></li>
+      <li><a href="#closures.html">Closures</a></li>
       <li>
-        <a href="/ejercicios/this.html"><code>this</code></a>
+        <a href="#this.html"><code>this</code></a>
       </li>
       <li>
-        <a href="/ejercicios/call-apply-bind.html">
+        <a href="#call-apply-bind.html">
           <code>Function.prototype.call</code>,
           <code>Function.prototype.apply</code> y
           <code>Function.prototype.bind</code>
         </a>
       </li>
-      <li><a href="/ejercicios/prototype.html">Prototype</a></li>
+      <li><a href="#prototype.html">Prototype</a></li>
       <li>
-        <a href="/ejercicios/prototypal-inheritance.html">
-          Herencia Prototipal
-        </a>
+        <a href="#prototypal-inheritance.html"> Herencia Prototipal </a>
       </li>
     </ol>
   </body>
