--- a/html/prototypal-inheritance.html
+++ b/html/prototypal-inheritance.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <a href="/ejercicios/">Go back</a>
+    <a href="#">Go back</a>
     <p><em>Abre la consola</em></p>
 
     <h1>
@@ -29,20 +29,20 @@
         console.log(`Hola, soy ${this.name}.`);
       };
 
-      const zelda = new Hero("Zelda");
+      const zelda = new Hero('Zelda');
 
       // propiedades de la instancia
-      console.log("Name:", zelda.name);
+      console.log('Name:', zelda.name);
       // propiedades de la "clase"
-      console.log("Saludar:", zelda.saludar);
+      console.log('Saludar:', zelda.saludar);
 
       // propiedades heredadas ej: toString
-      console.log("toString:", zelda.toString);
+      console.log('toString:', zelda.toString);
 
       // hasOwnProperty (de dónde sale toString o esto?)
       console.log(
         'zelda.hasOwnProperty("saludar"):',
-        zelda.hasOwnProperty("saludar")
+        zelda.hasOwnProperty('saludar'),
       );
 
       // inspeccionemos el prototipo del zelda
