--- a/html/prototype.html
+++ b/html/prototype.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <a href="/ejercicios/">Go back</a>
+    <a href="#">Go back</a>
     <p><em>Abre la consola</em></p>
 
     <script>
@@ -125,10 +125,10 @@
         console.log(`New: ${this.name}`);
       };
 
-      const zelda = new Hero("Zelda");
+      const zelda = new Hero('Zelda');
       zelda.saludar();
 
-      const link = new Hero("Link");
+      const link = new Hero('Link');
       link.saludar();
     </script>
   </body>
