--- a/html/scope.html
+++ b/html/scope.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <a href="/ejercicios/">Go back</a>
+    <a href="#">Go back</a>
     <p><em>Abre la consola</em></p>
 
     <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.js"></script>
