--- a/html/this.html
+++ b/html/this.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <a href="/ejercicios/">Go back</a>
+    <a href="#">Go back</a>
     <p><em>Abre la consola</em></p>
 
     <h1>
@@ -26,7 +26,7 @@
 
       // this en el scope de una función en strict mode
       function whoIsThisStrict() {
-        "use strict";
+        'use strict';
         return this;
       }
 
@@ -34,7 +34,7 @@
 
       // this en el contexto de un objeto
       const person = {
-        name: "Gabriel",
+        name: 'Gabriel',
         saludar: function () {
           console.log(`Hola soy ${this.name}`);
         },
@@ -56,7 +56,7 @@
         console.log(`Me llamo ${this.name}`);
       };
 
-      const angela = new Person("Angela");
+      const angela = new Person('Angela');
       angela.saludar();
     </script>
   </body>
