--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <main class="container">
       <video id="player" class="movie">
-        <source src="./dist/video/BigBuckBunny_512kb.mp4" type="" />
-        <source
+        <source src="./assets/videos/BigBuckBunny_512kb.mp4" />
+        <!-- <source
           src="https://ia800201.us.archive.org/12/items/BigBuckBunny_328/BigBuckBunny_512kb.mp4"
-        />
+        /> -->
       </video>
       <button id="playButton">Play/Pause</button>
       <button id="muteButton">Mute/Unmute</button>
